Project#show: related project card have funky little corners on top right. Fixed their responsiveness so that header doen't collide with text in smaller screen sizes. Wrapped whole card in link_to so it's easier to click on

--- a/app/assets/stylesheets/pages/_project-show.scss
+++ b/app/assets/stylesheets/pages/_project-show.scss
@@ -32,6 +32,7 @@
 }
 
 .related-project-card {
+  position: relative;
   display: inline-block;
   width: 25%;
   height: 20vh;
@@ -54,6 +55,21 @@
     font-size: 1.1rem;
     vertical-align: middle;
   }
+  &:after {
+    content: "";
+    position:absolute;
+    top: -10px;
+    right: -10px;
+    width:20px;
+    height:20px;
+    transform:rotate(45deg);
+    background-color:$my-red;
+  }
+  &:hover {
+    cursor: pointer;
+    box-shadow: 0 0 14px #8c8c8c;
+  }
+
   @media only screen and (max-width: 768px) {
     & {
       display: block;
@@ -62,6 +78,12 @@
       h3 {
         height: 3vh;
       }
+    }
+  }
+  
+  @media (max-width: 1000px) and (min-width: 769px) {
+    & {
+      width: 30%;
     }
   }
 }
